Installed express and angular-ui-router.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "webpack-dev-server --history-api-fallback --inline --progress",
     "test": "karma start",
     "test-watch": "karma start --auto-watch --no-single-run",
-    "start": "npm run server"
+    "start": "npm run server",
+    "api": "env $(cat .env | xargs) nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   },
   "homepage": "https://github.com/Foxandxss/angular-webpack-workflow",
   "dependencies": {
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "angular-ui-router": "^0.4.2",
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
