--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.4.2",
+    "dotenv": "^4.0.0",
+    "env": "0.0.2",
     "express": "^4.15.2"
   },
   "devDependencies": {
